--- a/app/views/home/terms.html.erb
+++ b/app/views/home/terms.html.erb
@@ -1,15 +1,15 @@
 <h1>Debt  Friends Terms and conditions</h1>
 <p>Welcome to our site. This page provides important information about use of this site and other legal matters.</p>
 <p>
-Please read all of the follow Debtfriends terms and conditions carefully before registering on Debtfriends. They govern your use of the Debtfriends web site, on a desktop or mobile device.(the "Site"). 
+Please read all of the following Debtfriends terms and conditions carefully before registering on Debtfriends. They govern your use of the Debtfriends web site, on a desktop or mobile device.(the "Site"). 
 </p>
 <p>
-By usDebtfriends this Site, you signify your acceptance of these Terms and Conditions of Use. Please be aware that they may be changed or updated at any time without prior notice. Changes are effective when posted on the Site. Please review them periodically for current information. By continuing to use the Site, you agree to any changes or updates. Additional legal notices, terms and conditions regarding Debtfriends.  If you do not agree to these terms and conditions, do not use this Site.</p>
+By using this Site, you signify your acceptance of these Terms and Conditions of Use. Please be aware that they may be changed or updated at any time without prior notice. Changes are effective when posted on the Site. Please review them periodically for current information. By continuing to use the Site, you agree to any changes or updates. Additional legal notices, terms and conditions regarding Debtfriends.  If you do not agree to these terms and conditions, do not use this Site.</p>
 
 <h1>Ownership and Use of Content Copyright</h1>
 
 <p>
-All of the information and content on this Site, includDebtfriends but not limited to all text, graphics, images, software applications and code, video, audio, and user interface design ("Content") is the property of Debtfriends or APayments Inc, and is protected by United States and foreign copyright laws and conventions. You may not modify, reproduce, copy, distribute, transmit, display, publish, download or upload, sell, license, create derivative works of or use any aspect of the Site or its Content for commercial or public purposes or for any other purpose not expressly permitted by these Terms and Conditions. The use of the Content on any other site or in a networked computer environment for any purpose, or any other republication, redistribution or use of the Content, including, without limitation, framing the Content within another site, is expressly prohibited without the prior written permission of Debtfriends.
+All of the information and content on this Site, including but not limited to all text, graphics, images, software applications and code, video, audio, and user interface design ("Content") is the property of Debtfriends or APayments Inc, and is protected by United States and foreign copyright laws and conventions. You may not modify, reproduce, copy, distribute, transmit, display, publish, download or upload, sell, license, create derivative works of or use any aspect of the Site or its Content for commercial or public purposes or for any other purpose not expressly permitted by these Terms and Conditions. The use of the Content on any other site or in a networked computer environment for any purpose, or any other republication, redistribution or use of the Content, including, without limitation, framing the Content within another site, is expressly prohibited without the prior written permission of Debtfriends.
 </p>
 <h1>Trademarks, Service Marks, and Logos</h1>
 <p>
@@ -58,12 +58,39 @@ U.S. Export Controls Software is subject to United States export controls. No so
 <p>
 These Terms and Conditions represent the entire agreement between Debtfriends and you relating to the subject matter herein. If any provision of these terms is deemed unlawful, void or for any reason unenforceable, then that provision will be deemed severed from these terms and will not affect the validity and enforceability of the remaining provisions.
 </p>  
-<h1>Debt Friends Service</h1>
+<h1>DebtFriends Service</h1>
 <p>
-Debt Friends is not a collections agency, does not represent either you or the creditor and makes no warranty or claim about your ability to resolve your debts differently than you could without usDebtfriends the service.</p>
+Debtfriends is not a collections agency, and does not represent the creditor. Apayments, Inc makes no warranty or claim about your ability to resolve your debts differently than you could without using Debtfriends.com settlement software service.
+</p>
+<p>
+	You agree to engage Apayments, Inc. to negotiate and attempt to settle the debt on your behalf. Your authorization is for purposes of settling your debts through Apayments, Inc or Debtfriends.com. website.
+</p>
+<p>
+	You will also on a timely basis furnish Apayments, Inc with any necessary personal and/or financial information to ensure your ability to settle your debt with creditors.
+</p>
+
+<h2>
+	Products and Services
+</h2>
+<p>
+Certain of the websites function as an online marketplace where visitors can research and submit requests for debt resolution services and research different types of home and consumer loans, as well as other products and services. We do not share your information with your creditors. 
+</p>
+<p>
+By submitting your contact information to us, you are expressly consenting to be contacted by us by  telephone, email or postal mail <i>even if you have opted into the national Do Not Call List administered by the Federal Trade Commission, any state equivalent Do Not Call List, or the Do Not Call List of any specific institution.</i>
+</p>
+<h2>
+	Modification of These Terms of Service.
+</h2>
+<p>
+Apayments,Inc reserves the right to change, modify, add or remove portions of these Terms of Service at any time by posting amended Terms of Service. Please check these Terms of Service periodically for changes. Your continued use of any of the websites after the posting of changes constitutes your binding acceptance of such changes. Except as stated elsewhere, such amended Terms of Service will be effective immediately and without further notice.
+</p>
 <h1>Stop Collections Calls Feature</h1>
 <p>
-The “Stop Collections Calls” feature is a voluntary service that is offered as a free service of Debt Friends to facilitate a dialogue between consumers and creditors. This is a voluntary service that you can terminate at any time.</p>
+The “Stop Collections Calls” feature is a voluntary service that is offered as a free service of Debt Friends to facilitate a
+dialogue between consumers and creditors. This is a voluntary service that you can terminate at any time.
+Debt Friends makes no warranty that any calls will be stopped by any creditor as a result of your participation in this
+service. You the consumer agree to update your information on a regular basis.
+</p>
 <p>
 Debt Friends makes no warranty that any calls will be stopped by any creditor as a result of your participation in this service.</p>
 <p>You the consumer agree to maintain regular updates</p> 
