--- a/app/views/users/user_account.html.erb
+++ b/app/views/users/user_account.html.erb
@@ -44,6 +44,7 @@
       </span>
       <%#= link_to("Cancel", "javascript:history.back();", :class => "alter") if current_user.profile%>
       <span class="button red"><%= f.submit("Finish") %></span>
+      <%= link_to("Cancel",root_path,:class=>"alter-link")%>
   </p>
 
 
