--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,23 +2,9 @@
 <html>
   <head>
 
-    <%= javascript_include_tag "jquery-1.9.0", "jquery-ui-1.10.0.custom" %>
-    <%= stylesheet_link_tag "jquery-ui-1.10.0.custom", :cache => "main" %>
 
    
 
-    <script>
-
-     jQuery(function() {
-        jQuery("#profile_birthdate").datepicker({
-          yearRange : '1915:1996',
-          changeMonth: true,
-          changeYear: true,
-          dateFormat: 'mm/dd/yy',
-          defaultDate: new Date(1915,5, 1)
-          });
-      });
-    </script>
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Language" content="en-us" />
@@ -29,7 +15,23 @@
     <link rel="icon"  type="image/png" href="/images/favicon.ico" />
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
     <title>Settle your debts & save with Debtfriends</title>
+
     <%= stylesheet_link_tag "debt_friends", "reset", "global","notification", :cache => "main" %>
+    <%= javascript_include_tag "jquery-1.9.0", "jquery-ui-1.10.0.custom" %>
+    <%= stylesheet_link_tag "jquery-ui-1.10.0.custom", :cache => "main" %>
+
+<!--    <script>
+
+     jQuery(function() {
+        jQuery("#profile_birthdate").datepicker({
+          yearRange : '1915:1996',
+          changeMonth: true,
+          changeYear: true,
+          dateFormat: 'mm/dd/yy',
+          defaultDate: new Date(1915,5, 1)
+          });
+      });
+    </script> !-->
 
   
     <%= javascript_include_tag "application", "global" %>
