--- a/app/views/user_mailer/update_notification_from_biz.html.erb
+++ b/app/views/user_mailer/update_notification_from_biz.html.erb
@@ -1,8 +1,10 @@
 <p>Hi <%=@user.email %>,</p>
 
 <p>
-You have an update to your debt settlement transaction on Debtfriends.<br>
-Please visit, https://www.debtfriends.com and log-in with your email and password<br> to view the changes.
+You have new information on Debtfriends.
+</p>
+<p>
+	Please go to http://www.debtfriends.com. Then, you can login with your email and password.
 </p>	
 
 <p>
